Handles chunk not being loaded when game is started. Reload Command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,6 @@ main: com.zerek.featherqueenofthehill.FeatherQueenOfTheHill
 api-version: 1.19
 authors: [ Zerek ]
 description: PvP Queen(King) of the hill mini-game
+commands:
+  queenofthehill:
+    description: used to reload the plugin
