--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,5 +5,7 @@ api-version: 1.19
 authors: [ Zerek ]
 description: PvP Queen(King) of the hill mini-game
 commands:
-  queenofthehill:
+  queen:
     description: used to reload the plugin
+    usage:
+      /queen <option>
