--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,6 @@ authors: [ Zerek ]
 description: PvP Queen(King) of the hill mini-game
 commands:
   queen:
-    description: used to reload the plugin
+    description: Queen Of The Hill command
     usage:
       /queen <option>
