--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: FeatherQueenOfTheHill
 version: '${project.version}'
-main: com.zerek.featherqueenofthehill.FeatherQueenOfTheHill
+main: dev.zerek.featherqueenofthehill.FeatherQueenOfTheHill
 api-version: 1.19
 authors: [ Zerek ]
 description: PvP Queen(King) of the hill mini-game
